# ReadNest/src/api/api/v1/Comment/like/index.ts
@@ -1,0 +1,12 @@
+/* eslint-disable */
+import type { DefineMethods } from 'aspida';
+import type * as Types from '../../../../@types';
+
+export type Methods = DefineMethods<{
+  post: {
+    status: 200;
+    /** OK */
+    resBody: Types.StringApiResponse;
+    reqBody: Types.CreateCommentLikeRequest;
+  };
+}>;
